--- a/docs/articles/lectures/16_CJS/16_CJS.Rmd
+++ b/docs/articles/lectures/16_CJS/16_CJS.Rmd
@@ -377,7 +377,7 @@ cjs <- nimbleCode({
 phi ~ dbeta(1, 1)
 p ~ dbeta(1, 1)
 for(i in 1:nind){
-  z[i,1] <- 1 #obviously, or you wouldn't have captured it
+  z[first[i],1] <- 1 #obviously, or you wouldn't have captured it
   for(t in (first[i]+1):nocc){
     z[i,t] ~ dbern(phi*z[i,t-1])
     y[i,t] ~ dbern(p*z[i,t])
@@ -526,7 +526,7 @@ for(t in 1:nocc){
     p[t] ~ dbeta(1, 1)
 }
 for(i in 1:nind){
-  z[i,1] <- 1 #obviously, or you wouldn't have captured it
+  z[i,first[i]] <- 1 #obviously, or you wouldn't have captured it
   for(t in (first[i]+1):nocc){
     z[i,t] ~ dbern(phi*z[i,t-1])
     y[i,t] ~ dbern(p[t]*z[i,t])
