--- a/vignettes/Lab10_CJS.Rmd
+++ b/vignettes/Lab10_CJS.Rmd
@@ -69,7 +69,8 @@ Let's organize the data to fit this simple model. We'll use the boreal toad (*Ra
 ```{r}
 data("WyomingFrogs")
 Rmus <- subset(frog_caps, frog_caps$Species == 'Rana muscosa')
-Rmus$Bd <- ifelse(Rmus$Bd.presence %in% c('Negative', 'negative'), 1, ifelse(Rmus$Bd.presence == 'Positive', 0, NA) )
+Rmus$Bd <- ifelse(Rmus$Bd.presence %in% c('Negative', 'negative'), 1,
+                  ifelse(Rmus$Bd.presence == 'Positive', 0, NA) )
 Rmus$id <- as.numeric(as.factor(Rmus$Ind.ID))
 Rmus$date <- as.Date(Rmus$Survey.Date, format = '%m/%d/%y')
 Rmus$year <- as.numeric(format(Rmus$date, '%y'))
@@ -100,6 +101,10 @@ for(j in 1:nrow(new.z)){
  last[j] <-  which(is.na(new.z[j, (first[j]+1):nocc]))[1]+first[j]-1
 }
 
+```
+Above, we are finding the first detection for each individual and then the last *useable* detection. This is how we would do it for actual known-fate data as well when we are censoring. If any individuals were only seen once (the first time is also the last time), we drop them from the model:
+
+```{r}
 z_useable <- new.z[which(last-first > 0),]
 first.use <- first[which(last-first > 0)]
 last.use <- last[which(last-first > 0)]
@@ -160,7 +165,7 @@ Check the chains. Remember that we defined eta as similar to survival, so we're 
 MCMCvis::MCMCtrace(frogs_kf, pdf = F, Rhat = T, n.eff = T)
 ```
 
-This model suggests the annual probability of infection (conditional on survival) is around 3.5% 
+This model suggests the annual probability of infection (conditional on survival) is around 3.9% 
 
 ```{r}
 1- MCMCvis::MCMCsummary(frogs_kf, Rhat = F, n.eff = F)
@@ -178,7 +183,7 @@ eta ~ dbeta(1, 1)
 p ~ dbeta(1, 1)
 
 for(i in 1:nind){
-  z[i,1] <- 1 #initial capture
+  z[i,first[i]] <- 1 #initial capture
   for(t in (first[i]+1):nocc){
     z[i,t] ~ dbern(eta*z[i,t-1])
     y[i,t] ~ dbern(p*z[i,t])
@@ -200,8 +205,11 @@ y.new.cjs <- y.cjs[rowSums(y.cjs, na.rm = T) > 0,] #get rid of ones with no nega
 first.cjs <- apply(y.new.cjs, 1, function(row) {
   which(row > 0)[1]  # Returns the index of the first detection
 })
+```
 
-#can't use guys only seen on the last interval
+Remember that we can't use individuals that were only seen on the last interval
+
+```{r}
 bad <- which(first.cjs == nocc.cjs)
 y.new.cjs <- y.new.cjs[-c(bad),] #remove bad ones
 z.new.cjs <- y.new.cjs
@@ -291,8 +299,21 @@ Let's see how the estimates compare with the Known-fate style model.
 ```{r, echo=T}
 kf_out <- 1- MCMCvis::MCMCsummary(frogs_kf, Rhat = F, n.eff = F)
 cjs_out <- 1- MCMCvis::MCMCsummary(frogs_cjs, Rhat = F, n.eff = F, params = 'eta')
-rbind(kf_out, cjs_out)
+frogs_out <- rbind(kf_out, cjs_out)
+frogs_out
 ```
+```{r, echo=T}
+gg_frogs <- data.frame(Median = frogs_out$`50%`,
+                       LCI = frogs_out$`2.5%`,
+                       UCI = frogs_out$`97.5%`,
+                       Model = c('Known Fate', 'CJS'))
+ggplot(gg_frogs, aes(x = Model, y = Median))+
+  geom_pointrange(aes(ymin = LCI, ymax = UCI))+
+  theme_bw()+
+  ylab('Infection Probability')+
+  theme(axis.text = element_text(size = 20), axis.title = element_text(size = 25))
+```
+
 
 And that is why you should not ignore detection probability. 
 
