--- a/vignettes/Lab10_CJS.Rmd
+++ b/vignettes/Lab10_CJS.Rmd
@@ -322,7 +322,7 @@ And that is why you should not ignore detection probability.
 
 1. Using only the capture records for *Rana sierrae*, write a CJS model for apparent survival that models capture probability as a function of both sex and a random effect of year. Make a ggplot showing detection probability across time, with different colors for the different sexes. Note: you will need to remove frogs with Ids that start with the number 9. These are an error in the dataset (example: "9.00043E+14")
 
-2. You are a reviewer for a journal and are trying to run code from several manuscripts to make sure the author's results make sense. Unfortunately, with the information you are given, none of the models run. Use data('bad_data') to find the information from 3 manuscripts (Birds N-mixture, frog CJS, and falcons). Diagnose the problem(s) with each dataset. If the problem is in the initial values, determine what initial value is needed instead to make the model run. You do not need to run the models all the way, just fix the information until you can get a non-NA, non-infinite value for calculate(). 
+2. You are a reviewer for a journal and are trying to run code from several manuscripts to make sure the author's results make sense. Unfortunately, with the information you are given, none of the models run. Use data('bad_data') to find the information from 3 manuscripts (Birds Occupancy, frog CJS, and falcons). Diagnose the problem(s) with each dataset. If the problem is in the initial values, determine what initial value is needed instead to make the model run. You do not need to run the models all the way, just fix the information until you can get a non-NA, non-infinite value for calculate(). 
 
 Here's an example workflow to get you started for the first manuscript (birds):
 
